<resources>
    <string name="app_name">BabyTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_your_">Track Your Baby\'s \n Activities with Ease</string>
    <string name="get_started">Get started with tracking your baby\'s \nfeedings, diaper changes, sleep patterns, \nand more…</string>
    <string name="stay_connec">Stay Connected \nwith Caregivers</string>
    <string name="share_acces">Share access to your baby\'s tracker with \nfamily members, babysitters, or healthcare \nproviders</string>
    <string name="get_premium">Get Premium!</string>
    <string name="share_the_c">Share the care</string>
    <string name="all_in_one_">All-in-one baby tracker</string>
    <string name="watch_your_">Watch your babys growth</string>
    <string name="annual">Annual</string>
    <string name="feeding">Feeding</string>
    <string name="sleep">Sleep</string>
    <string name="symptoms">Symptoms</string>
    <string name="start">Start</string>
    <string name="some_id">$30</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="terms_of_us">Terms of Use</string>
    <string name="privacy_pol">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="restore_pur">Restore Purchase</string>
    <string name="get_premium1">Get Premium</string>
    <string name="home">Home</string>
    <string name="time">Time</string>
    <string name="amount_ml_">Amount (ml)</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="snackbar1">Please enter time and amount</string>
    <string name="snackbar2">Saved!</string>
    <string name="snackbar_symptos">Please enter time and symptoms</string>
    <string name="choose_time">Choose Time</string>
    <string name="fell_sleep">Fell Sleep</string>
    <string name="woke_up">Woke Up</string>
    <string name="runny_nose">Runny Nose</string>
    <string name="calender">Calender</string>
    <string name="tue_feb_12">Tue, Feb 12</string>
</resources>