<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.sleep.SleepFragment">
    <TextView
        android:id="@+id/textViewSleepTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size12"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sleep"
        android:textColor="@color/main"
        android:textSize="@dimen/size11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewSleepBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size12"
        android:src="@drawable/ic_back_ios"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSleepTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewSleepTitle" />
    <EditText
        android:id="@+id/editTextTime1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size12"
        android:layout_marginTop="@dimen/size16"
        android:layout_marginEnd="@dimen/size12"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/fell_sleep"
        android:inputType="text"
        android:padding="@dimen/size7"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/size8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSleepTitle" />

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size12"
        android:layout_marginTop="@dimen/size16"
        android:layout_marginEnd="@dimen/size12"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/woke_up"
        android:inputType="number"
        android:padding="@dimen/size7"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/size8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime1" />

    <EditText
        android:id="@+id/editTextNoteSleep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size12"
        android:layout_marginTop="@dimen/size16"
        android:layout_marginEnd="@dimen/size12"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/note"
        android:inputType="text"
        android:paddingLeft="@dimen/size7"
        android:paddingTop="@dimen/size7"
        android:paddingBottom="@dimen/size110"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/size8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSaveSleep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size16"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="@dimen/size16"
        android:background="@drawable/next_button"
        android:fontFamily="@font/poppins"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/size8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoteSleep" />

    <ImageView
        android:id="@+id/imageViewChooseTime1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size8"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTime1"
        app:layout_constraintEnd_toEndOf="@+id/editTextTime1"
        app:layout_constraintTop_toTopOf="@+id/editTextTime1" />

    <ImageView
        android:id="@+id/imageViewChooseTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size8"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTime2"
        app:layout_constraintEnd_toEndOf="@+id/editTextTime2"
        app:layout_constraintTop_toTopOf="@+id/editTextTime2" />
</androidx.constraintlayout.widget.ConstraintLayout>